--- a/src/i18n/locales/en/teams.json
+++ b/src/i18n/locales/en/teams.json
@@ -76,5 +76,26 @@
     "cancel": "Cancel",
     "create": "Create team",
     "creating": "Creating..."
+  },
+  "inviteMemberModal": {
+    "title": "Invite member",
+    "description": "Invite a user to <strong>{{teamName}}</strong> by entering their email address.",
+    "emailLabel": "Email address",
+    "emailPlaceholder": "user@example.com",
+    "emailRequired": "Email is required",
+    "emailInvalid": "Invalid email address",
+    "emailHint": "The person will receive an invitation and can accept it from their account.",
+    "errorDuplicate": "An invitation has already been sent to this email address",
+    "cancel": "Cancel",
+    "send": "Send invitation",
+    "sending": "Sending...",
+    "successTitle": "Invitation created!",
+    "successDescription": "Share the link below with {{email}}",
+    "inviteLinkLabel": "Invitation link:",
+    "copyLink": "Copy",
+    "linkCopied": "Copied!",
+    "tipTitle": "💡 Tip:",
+    "tipDescription": "Send the link via email, Slack, or WhatsApp. When the recipient clicks the link, they will automatically be added to the team when they log in or create an account.",
+    "close": "Close"
   }
 }
