feat: i18n - EditItemModal migration

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -132,22 +132,45 @@
     "deleteConfirmMessage": "Are you sure you want to delete \"{name}\"? This action cannot be undone."
   },
   "addItemModal": {
-    "title": "Add new item",
-    "itemNameLabel": "Item name",
+    "title": "Add New Item",
+    "itemNameLabel": "Item Name",
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "itemNameRequired": "Name is required",
     "ringLabel": "Ring",
     "activityLabel": "Activity",
     "labelLabel": "Label",
-    "startDateLabel": "Start date",
+    "startDateLabel": "Start Date",
     "startDateRequired": "Start date is required",
-    "endDateLabel": "End date",
+    "endDateLabel": "End Date",
     "endDateRequired": "End date is required",
     "endDateInvalid": "End date must be after start date",
     "timeLabel": "Time (optional)",
     "timePlaceholder": "e.g., 09:00 - 17:00",
     "cancel": "Cancel",
-    "addItem": "Add item"
+    "addItem": "Add Item"
+  },
+  "editItemModal": {
+    "title": "Edit Item",
+    "itemNameLabel": "Name",
+    "itemNamePlaceholder": "e.g., Christmas campaign",
+    "itemNameRequired": "Name is required",
+    "ringLabel": "Ring",
+    "activityLabel": "Activity",
+    "labelLabel": "Label",
+    "startDateLabel": "Start Date",
+    "startDateRequired": "Start date is required",
+    "endDateLabel": "End Date",
+    "endDateRequired": "End date is required",
+    "endDateInvalid": "End date must be after start date",
+    "timeLabel": "Time (optional)",
+    "timePlaceholder": "e.g., 09:00 - 17:00",
+    "deleteButton": "Delete",
+    "cancel": "Cancel",
+    "save": "Save",
+    "deleteConfirmTitle": "Delete Item?",
+    "deleteConfirmMessage": "Are you sure you want to delete \"{itemName}\"? This action cannot be undone.",
+    "deleteConfirmCancel": "Cancel",
+    "deleteConfirmDelete": "Delete"
   },
   "modal": {
     "addActivity": "Add Activity",
