--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -132,8 +132,8 @@
     "deleteConfirmMessage": "Är du säker på att du vill radera \"{name}\"? Denna åtgärd kan inte ångras."
   },
   "addItemModal": {
-    "title": "Lägg till nytt objekt",
-    "itemNameLabel": "Objektnamn",
+    "title": "Lägg till ny händelse",
+    "itemNameLabel": "Händelsens namn",
     "itemNamePlaceholder": "t.ex., Julkampanj",
     "itemNameRequired": "Namn är obligatoriskt",
     "ringLabel": "Ring",
@@ -147,7 +147,30 @@
     "timeLabel": "Tid (valfritt)",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
     "cancel": "Avbryt",
-    "addItem": "Lägg till objekt"
+    "addItem": "Lägg till händelse"
+  },
+  "editItemModal": {
+    "title": "Redigera händelse",
+    "itemNameLabel": "Namn",
+    "itemNamePlaceholder": "t.ex., Julkampanj",
+    "itemNameRequired": "Namn är obligatoriskt",
+    "ringLabel": "Ring",
+    "activityLabel": "Aktivitet",
+    "labelLabel": "Etikett",
+    "startDateLabel": "Startdatum",
+    "startDateRequired": "Startdatum är obligatoriskt",
+    "endDateLabel": "Slutdatum",
+    "endDateRequired": "Slutdatum är obligatoriskt",
+    "endDateInvalid": "Slutdatum måste vara efter startdatum",
+    "timeLabel": "Tid (valfritt)",
+    "timePlaceholder": "t.ex., 09:00 - 17:00",
+    "deleteButton": "Radera",
+    "cancel": "Avbryt",
+    "save": "Spara",
+    "deleteConfirmTitle": "Radera händelse?",
+    "deleteConfirmMessage": "Är du säker på att du vill radera \"{itemName}\"? Denna åtgärd kan inte ångras.",
+    "deleteConfirmCancel": "Avbryt",
+    "deleteConfirmDelete": "Radera"
   },
   "modal": {
     "addActivity": "Lägg till aktivitet",
