--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -187,6 +187,34 @@
     "nextYearDescription": "Skapa en tom sida för {{year}} med samma struktur (ringar delas automatiskt)",
     "cancel": "Avbryt"
   },
+  "calendarSidebar": {
+    "months": {
+      "january": "Januari",
+      "february": "Februari",
+      "march": "Mars",
+      "april": "April",
+      "may": "Maj",
+      "june": "Juni",
+      "july": "Juli",
+      "august": "Augusti",
+      "september": "September",
+      "october": "Oktober",
+      "november": "November",
+      "december": "December"
+    },
+    "daysOfWeek": {
+      "mon": "mån",
+      "tue": "tis",
+      "wed": "ons",
+      "thu": "tor",
+      "fri": "fre",
+      "sat": "lör",
+      "sun": "sön"
+    },
+    "zoomInMonth": "Zooma in månad",
+    "edit": "Redigera",
+    "noActivitiesThisMonth": "Inga aktiviteter denna månad"
+  },
   "modal": {
     "addActivity": "Lägg till aktivitet",
     "editActivity": "Redigera aktivitet",
