feat: i18n - CookieConsent migration

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -111,5 +111,24 @@
     "saving": "Saving...",
     "saveToDatabase": "Save to database",
     "saveToBrowser": "Save to browser storage"
+  },
+  "cookieConsent": {
+    "title": "Cookie Settings",
+    "description": "We use cookies to improve your experience on our website, personalize content and ads, provide social media features, and analyze our traffic. We also share information about your use of our website with our social media, advertising, and analytics partners.",
+    "showDetails": "Show details",
+    "hideDetails": "Hide details",
+    "necessaryCookies": "Necessary Cookies",
+    "necessaryDescription": "These cookies are necessary for the website to function and cannot be switched off.",
+    "preferencesCookies": "Preference Cookies",
+    "preferencesDescription": "These cookies enable the website to remember choices you have made and provide enhanced, more personal features.",
+    "statisticsCookies": "Statistics Cookies",
+    "statisticsDescription": "These cookies help us understand how visitors interact with the website by collecting and reporting information anonymously.",
+    "marketingCookies": "Marketing Cookies",
+    "marketingDescription": "These cookies are used to track visitors across websites with the purpose of displaying relevant advertisements.",
+    "privacyPolicy": "Privacy Policy",
+    "cookiePolicy": "Cookie Policy",
+    "acceptNecessary": "Accept Necessary",
+    "acceptAll": "Accept All",
+    "savePreferences": "Save Preferences"
   }
 }
