feat: i18n - ProfilePage and PreviewWheelPage migration

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -130,5 +130,55 @@
     "acceptNecessary": "Accept Necessary",
     "acceptAll": "Accept All",
     "savePreferences": "Save Preferences"
+  },
+  "profilePage": {
+    "title": "My Profile",
+    "subtitle": "Manage your account settings",
+    "back": "Back",
+    "accountSettings": "Account settings",
+    "accountInfo": "Account Information",
+    "email": "Email",
+    "userId": "User ID",
+    "memberSince": "Member since",
+    "googleIntegrations": "Google Integrations",
+    "googleIntegrationsDescription": "Connect your Google account to sync data from Calendar and Sheets to your wheels.",
+    "loadingIntegrations": "Loading integrations...",
+    "googleCalendar": "Google Calendar",
+    "googleCalendarDescription": "Sync events from your calendars",
+    "googleSheets": "Google Sheets",
+    "googleSheetsDescription": "Import data from spreadsheets",
+    "connected": "Connected",
+    "disconnect": "Disconnect",
+    "connecting": "Connecting...",
+    "connectCalendar": "Connect Calendar",
+    "connectSheets": "Connect Sheets",
+    "disconnectConfirm": "Are you sure you want to disconnect this integration? All ring connections will be removed.",
+    "integrationConnected": "{{provider}} connected!",
+    "integrationDisconnected": "Integration removed",
+    "security": "Security",
+    "changePassword": "Change password",
+    "newPassword": "New password",
+    "confirmPassword": "Confirm new password",
+    "passwordMinLength": "Password must be at least 6 characters",
+    "passwordsNoMatch": "Passwords do not match",
+    "passwordUpdated": "Password updated!",
+    "updatePassword": "Update password",
+    "updating": "Updating...",
+    "cancel": "Cancel",
+    "dangerZone": "Danger Zone",
+    "signOutDescription": "When you sign out, you will be returned to the login page.",
+    "signOut": "Sign Out"
+  },
+  "previewWheelPage": {
+    "loading": "Loading wheel...",
+    "accessDenied": "Access Denied",
+    "wheelNotFound": "The wheel was not found or is not publicly shared.",
+    "goToHome": "Go to homepage",
+    "publicShared": "Publicly shared year wheel - Read-only mode",
+    "previousYear": "Previous year",
+    "nextYear": "Next year",
+    "readOnlyInfo": "This is a read-only preview.",
+    "createYourOwn": "Create your own year wheel",
+    "errorLoading": "An error occurred while loading the wheel."
   }
 }
