--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -130,5 +130,55 @@
     "acceptNecessary": "Acceptera nödvändiga",
     "acceptAll": "Acceptera alla",
     "savePreferences": "Spara preferenser"
+  },
+  "profilePage": {
+    "title": "Min profil",
+    "subtitle": "Hantera dina kontoinställningar",
+    "back": "Tillbaka",
+    "accountSettings": "Kontoinställningar",
+    "accountInfo": "Kontoinformation",
+    "email": "E-post",
+    "userId": "Användar-ID",
+    "memberSince": "Medlem sedan",
+    "googleIntegrations": "Google Integrationer",
+    "googleIntegrationsDescription": "Anslut ditt Google-konto för att synkronisera data från Calendar och Sheets till dina hjul.",
+    "loadingIntegrations": "Laddar integrationer...",
+    "googleCalendar": "Google Calendar",
+    "googleCalendarDescription": "Synkronisera händelser från dina kalendrar",
+    "googleSheets": "Google Sheets",
+    "googleSheetsDescription": "Importera data från kalkylblad",
+    "connected": "Ansluten",
+    "disconnect": "Koppla från",
+    "connecting": "Ansluter...",
+    "connectCalendar": "Anslut Calendar",
+    "connectSheets": "Anslut Sheets",
+    "disconnectConfirm": "Är du säker på att du vill koppla från denna integration? Alla ring-kopplingar kommer att tas bort.",
+    "integrationConnected": "{{provider}} ansluten!",
+    "integrationDisconnected": "Integration borttagen",
+    "security": "Säkerhet",
+    "changePassword": "Ändra lösenord",
+    "newPassword": "Nytt lösenord",
+    "confirmPassword": "Bekräfta nytt lösenord",
+    "passwordMinLength": "Lösenordet måste vara minst 6 tecken",
+    "passwordsNoMatch": "Lösenorden matchar inte",
+    "passwordUpdated": "Lösenord uppdaterat!",
+    "updatePassword": "Uppdatera lösenord",
+    "updating": "Uppdaterar...",
+    "cancel": "Avbryt",
+    "dangerZone": "Farlig zon",
+    "signOutDescription": "När du loggar ut kommer du att återvända till inloggningssidan.",
+    "signOut": "Logga ut"
+  },
+  "previewWheelPage": {
+    "loading": "Laddar hjul...",
+    "accessDenied": "Åtkomst nekad",
+    "wheelNotFound": "Hjulet hittades inte eller är inte publikt delat.",
+    "goToHome": "Gå till startsidan",
+    "publicShared": "Publikt delat årshjul - Skrivskyddat läge",
+    "previousYear": "Föregående år",
+    "nextYear": "Nästa år",
+    "readOnlyInfo": "Detta är en skrivskyddad förhandsgranskning.",
+    "createYourOwn": "Skapa ditt eget årshjul",
+    "errorLoading": "Ett fel uppstod vid laddning av hjulet."
   }
 }
