fix: i18n - correct pricing (79kr/64kr), add benefits, demo titles, auth strings, footer tagline

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -13,6 +13,7 @@
   "backToSignIn": "Back to sign in",
   "login": {
     "title": "Welcome back",
+    "welcomeBack": "Welcome back",
     "subtitle": "Sign in to continue with your wheels",
     "button": "Sign in",
     "loading": "Signing in...",
@@ -28,6 +29,7 @@
     "orContinueWith": "or continue with",
     "google": "Google",
     "hasAccount": "Already have an account? Sign in",
+    "noCreditCard": "No credit card required",
     "success": {
       "title": "Account created!",
       "emailTitle": "Confirm your email",
@@ -38,5 +40,10 @@
       "passwordMismatch": "Passwords don't match",
       "passwordTooShort": "Password must be at least 6 characters"
     }
+  },
+  "provider": {
+    "name": "YearWheel Planner",
+    "tagline": "is a SaaS service created and operated by",
+    "company": "CommunitasLabs Inc"
   }
 }
