--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -13,6 +13,7 @@
   "backToSignIn": "Tillbaka till inloggning",
   "login": {
     "title": "Välkommen tillbaka",
+    "welcomeBack": "Välkommen tillbaka",
     "subtitle": "Logga in för att fortsätta med dina hjul",
     "button": "Logga in",
     "loading": "Loggar in...",
@@ -28,6 +29,7 @@
     "orContinueWith": "eller fortsätt med",
     "google": "Google",
     "hasAccount": "Har du redan ett konto? Logga in",
+    "noCreditCard": "Inget kreditkort krävs",
     "success": {
       "title": "Konto skapat!",
       "emailTitle": "Bekräfta din e-post",
@@ -38,5 +40,10 @@
       "passwordMismatch": "Lösenorden matchar inte",
       "passwordTooShort": "Lösenordet måste vara minst 6 tecken"
     }
+  },
+  "provider": {
+    "name": "YearWheel Planner",
+    "tagline": "är en SaaS-tjänst skapad och driven av",
+    "company": "CommunitasLabs Inc"
   }
 }
