feat: i18n - add version history, continuing final components

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -236,6 +236,38 @@
     "noSession": "No active session",
     "edgeFunctionError": "Edge function call failed"
   },
+  "versionHistory": {
+    "title": "Version History",
+    "versionsSaved": "{{count}} version saved",
+    "versionsSaved_other": "{{count}} versions saved",
+    "loading": "Loading...",
+    "error": "Could not load version history",
+    "retryButton": "Try again",
+    "noVersions": "No versions saved yet",
+    "noVersionsDescription": "Versions are created automatically when you save",
+    "version": "Version {{number}}",
+    "latest": "Latest",
+    "autoSaved": "Auto-saved",
+    "unknownUser": "Unknown user",
+    "justNow": "Just now",
+    "minutesAgo": "{{count}} min ago",
+    "hoursAgo": "{{count}} hr ago",
+    "daysAgo": "{{count}} days ago",
+    "previewTooltip": "Preview",
+    "restoreTooltip": "Restore this version",
+    "deleteTooltip": "Delete version",
+    "restoreConfirm": "Restore to version {{number}}?\n\nThis will replace the current version with this old version. A new version of the current state will be created first, so nothing is lost.",
+    "deleteConfirm": "Delete version {{number}}? This cannot be undone.",
+    "restored": "Version {{number}} restored!",
+    "deleted": "Version deleted",
+    "restoreError": "Could not restore version",
+    "deleteError": "Could not delete version",
+    "previewError": "Could not load preview",
+    "footerInfo": "Versions are saved automatically and kept for 100 days",
+    "closeButton": "Close",
+    "previewTitle": "Preview: Version {{number}}",
+    "restoreButton": "Restore this version"
+  },
   "modal": {
     "addActivity": "Add Activity",
     "editActivity": "Edit Activity",
