--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -236,6 +236,38 @@
     "noSession": "Ingen aktiv session",
     "edgeFunctionError": "Edge function call failed"
   },
+  "versionHistory": {
+    "title": "Versionshistorik",
+    "versionsSaved": "{{count}} version sparad",
+    "versionsSaved_other": "{{count}} versioner sparade",
+    "loading": "Laddar...",
+    "error": "Kunde inte ladda versionshistorik",
+    "retryButton": "Försök igen",
+    "noVersions": "Inga versioner sparade än",
+    "noVersionsDescription": "Versioner skapas automatiskt när du sparar",
+    "version": "Version {{number}}",
+    "latest": "Senaste",
+    "autoSaved": "Auto-sparad",
+    "unknownUser": "Okänd användare",
+    "justNow": "Just nu",
+    "minutesAgo": "{{count}} min sedan",
+    "hoursAgo": "{{count}} tim sedan",
+    "daysAgo": "{{count}} dagar sedan",
+    "previewTooltip": "Förhandsgranska",
+    "restoreTooltip": "Återställ denna version",
+    "deleteTooltip": "Radera version",
+    "restoreConfirm": "Återställ till version {{number}}?\n\nDetta kommer att ersätta den nuvarande versionen med denna gamla version. En ny version av det nuvarande tillståndet kommer att skapas först, så inget går förlorat.",
+    "deleteConfirm": "Radera version {{number}}? Detta går inte att ångra.",
+    "restored": "Version {{number}} återställd!",
+    "deleted": "Version raderad",
+    "restoreError": "Kunde inte återställa version",
+    "deleteError": "Kunde inte radera version",
+    "previewError": "Kunde inte ladda förhandsvisning",
+    "footerInfo": "Versioner sparas automatiskt och behålls i 100 dagar",
+    "closeButton": "Stäng",
+    "previewTitle": "Förhandsvisning: Version {{number}}",
+    "restoreButton": "Återställ denna version"
+  },
   "modal": {
     "addActivity": "Lägg till aktivitet",
     "editActivity": "Redigera aktivitet",
